--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Jason Yu</h1>
 						<p>Data Science Project Portfolio<br />
-						Github: <a href="github.com/jason-yu1"></a></p>
+						Github: <a href="github.com/jason-yu1"> github.com/jason-yu1</a></p>
 					</header>
 
 				<!-- Nav -->
