--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Jason Yu</h1>
 						<p>Data Science Project Portfolio<br />
-						Github: <a href="github.com/jason-yu1"> github.com/jason-yu1</a></p>
+						Github: <a href="https://github.com/jason-yu1"> github.com/jason-yu1</a></p>
 					</header>
 
 				<!-- Nav -->
@@ -43,7 +43,7 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>About Me</h2>
 										</header>
 										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
 										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
