update carpe data

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
+							<li><a href="#intro" class="active">About Me</a></li>
+							<li><a href="#first">Projects</a></li>
+							<li><a href="#second">ML Algorithm Implementations</a></li>
 							<li><a href="#cta">Get Started</a></li>
 						</ul>
 					</nav>
@@ -45,9 +45,9 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>Hi! I am currently a Masters in Data Science student at University of San Francisco. 
+											I did my undergraduate degree in Statistics at UCSB. I am also a data science intern 
+											at hims & hers health.</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
@@ -59,13 +59,19 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Projects</h2>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Mining Criminal Records based on HTML Data</h3>
+										<p>Built a binary classifer to predict whether a webpage contains a criminal record or not.</p>
+
+										<footer class="major">
+											<ul class="actions special">
+												<li><a href="generic.html" class="button">More</a></li>
+											</ul>
+										</footer>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
