--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 
 										<footer class="major">
 											<ul class="actions special">
-												<li><a href="generic.html" class="button">More</a></li>
+												<li><a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+													 class="button">More</a></li>
 											</ul>
 										</footer>
 									</li>
