--- a/index.html
+++ b/index.html
@@ -99,6 +99,30 @@
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
+								<ul class="features">
+									<li>
+										<span class="icon solid major style1 fa-code"></span>
+										<h3>Mining Criminal Records based on HTML Data</h3>
+										<p>Built a binary classifer to predict whether a webpage contains a criminal record or not.</p>
+
+										<footer class="major">
+											<ul class="actions special">
+												<li><a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+													 class="button">More</a></li>
+											</ul>
+										</footer>
+									</li>
+									<li>
+										<span class="icon major style3 fa-copy"></span>
+										<h3>Amed sed feugiat</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+									</li>
+									<li>
+										<span class="icon major style5 fa-gem"></span>
+										<h3>Dolor nullam</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+									</li>
+								</ul>
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
