--- a/index.html
+++ b/index.html
@@ -76,13 +76,25 @@
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Search Engine Project</h3>
+										<p>Implemented search engines in Python with object-oriented hash tables from scratch, building web pages (Jinja) for representing searched keywords and relevant sentences.</p>
+										<footer class="major">
+											<ul class="actions special">
+												<li><a href="https://github.com/jason-yu1/Search-Engine"
+													 class="button">More</a></li>
+											</ul>
+										</footer>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Airline Booking Recommendations</h3>
+										<p>Developed matrix factorization model to make the best recommendation of an additional in-trip destination.</p>
+										<footer class="major">
+											<ul class="actions special">
+												<li><a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+													 class="button">More</a></li>
+											</ul>
+										</footer>
 									</li>
 								</ul>
 								<footer class="major">
