--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Search Engine Project</h3>
-										<p>Implemented search engines in Python with object-oriented hash tables from scratch, building web pages (Jinja) for representing searched keywords and relevant sentences.</p>
+										<p>Implemented search engines in Python using hash tables built from scratch.</p>
 										<footer class="major">
 											<ul class="actions special">
 												<li><a href="https://github.com/jason-yu1/Search-Engine"
@@ -96,6 +96,26 @@
 											</ul>
 										</footer>
 									</li>
+								</ul>
+								<ul class="features">
+									<footer class="major">
+										<ul class="actions special">
+											<li><a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+												 class="button">More</a></li>
+										</ul>
+									</footer>
+									<footer class="major">
+										<ul class="actions special">
+											<li><a href="https://github.com/jason-yu1/Search-Engine"
+												 class="button">More</a></li>
+										</ul>
+									</footer>
+									<footer class="major">
+										<ul class="actions special">
+											<li><a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+												 class="button">More</a></li>
+										</ul>
+									</footer>
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
