--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
+		<title>jason-yu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -66,56 +66,43 @@
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>Mining Criminal Records based on HTML Data</h3>
 										<p>Built a binary classifer to predict whether a webpage contains a criminal record or not.</p>
-
-										<footer class="major">
-											<ul class="actions special">
-												<li><a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
-													 class="button">More</a></li>
-											</ul>
-										</footer>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Search Engine Project</h3>
 										<p>Implemented search engines in Python using hash tables built from scratch.</p>
-										<footer class="major">
-											<ul class="actions special">
-												<li><a href="https://github.com/jason-yu1/Search-Engine"
-													 class="button">More</a></li>
-											</ul>
-										</footer>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>Airline Booking Recommendations</h3>
 										<p>Developed matrix factorization model to make the best recommendation of an additional in-trip destination.</p>
-										<footer class="major">
-											<ul class="actions special">
-												<li><a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
-													 class="button">More</a></li>
-											</ul>
-										</footer>
 									</li>
 								</ul>
 								<ul class="features">
-									<footer class="major">
-										<ul class="actions special">
-											<li><a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
-												 class="button">More</a></li>
-										</ul>
-									</footer>
-									<footer class="major">
-										<ul class="actions special">
-											<li><a href="https://github.com/jason-yu1/Search-Engine"
-												 class="button">More</a></li>
-										</ul>
-									</footer>
-									<footer class="major">
-										<ul class="actions special">
-											<li><a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
-												 class="button">More</a></li>
-										</ul>
-									</footer>
+									<li>
+										<footer class="major">
+											<ul class="actions special">
+												<li><a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+														class="button">More</a></li>
+											</ul>
+										</footer>
+									</li>
+									<li>
+										<footer class="major">
+											<ul class="actions special">
+												<li><a href="https://github.com/jason-yu1/Search-Engine"
+														class="button">More</a></li>
+											</ul>
+										</footer>
+										</li>
+									<li>
+										<footer class="major">
+											<ul class="actions special">
+												<li><a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+														class="button">More</a></li>
+											</ul>
+										</footer>
+									</li>
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
@@ -127,14 +114,14 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
+									<h2>Machine Learning Algorithm Implementations<br> From Scratch</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Mining Criminal Records based on HTML Data</h3>
+										<h3>K-means</h3>
 										<p>Built a binary classifer to predict whether a webpage contains a criminal record or not.</p>
 
 										<footer class="major">
@@ -146,13 +133,59 @@
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
+										<h3>Feature Importance</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<footer class="major">
+											<ul class="actions special">
+												<li><a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+													 class="button">More</a></li>
+											</ul>
+										</footer>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
+										<h3>Linear Regression</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<footer class="major">
+											<ul class="actions special">
+												<li><a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+													 class="button">More</a></li>
+											</ul>
+										</footer>
+									</li>
+									<li>
+										<span class="icon solid major style1 fa-code"></span>
+										<h3>Decision Tree</h3>
+										<p>Built a binary classifer to predict whether a webpage contains a criminal record or not.</p>
+
+										<footer class="major">
+											<ul class="actions special">
+												<li><a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+													 class="button">More</a></li>
+											</ul>
+										</footer>
+									</li>
+									<li>
+										<span class="icon major style3 fa-copy"></span>
+										<h3>Random Forest</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<footer class="major">
+											<ul class="actions special">
+												<li><a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+													 class="button">More</a></li>
+											</ul>
+										</footer>
+									</li>
+									<li>
+										<span class="icon major style5 fa-gem"></span>
+										<h3>Gradient Boosting</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<footer class="major">
+											<ul class="actions special">
+												<li><a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+													 class="button">More</a></li>
+											</ul>
+										</footer>
 									</li>
 								</ul>
 								<ul class="statistics">
