fix captions + add images

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>Search Engine Project</h3>
-										<p>Implemented search engines in Python using hash tables built from scratch.</p>
+										<h3>Scalable Music Recommendation and Song Rating Prediction ETL Pipeline</h3>
+										<p>Built a recommendation engine using a matrix factorization using Spark ML.</p>
 										<a style = "margin:65px 2%;" href="https://github.com/jason-yu1/Search-Engine"
 														class="button">More</a>
 									</li>
@@ -95,54 +95,55 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Machine Learning Algorithm Implementations<br> From Scratch</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<!-- <p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
+									posuere. Nulla massa urna, fermentum eget quam aliquet.</p> -->
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>K-means</h3>
-										<p>Built a binary classifer to predict whether a webpage contains a criminal record or not.</p>
+										<p>Implementation of K-means/K-means++.</p>
 										<a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
 														class="button">More</a>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Feature Importance</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Feature importance techniques using supervised and unsupervised methods.</p>
 										<a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
 														class="button">More</a>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>Linear Regression</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Implementation of regularized linear regression with gradient descent.</p>
 										<a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
 														class="button">More</a>
 									</li>
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>Decision Tree</h3>
-										<p>Built a binary classifer to predict whether a webpage contains a criminal record or not.</p>
+										<p>Implementation of decision tree.</p>
 										<a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
 														class="button">More</a>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Random Forest</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Implementation of random forest.</p>
 										<a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
 														class="button">More</a>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>Gradient Boosting</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Implementation of gradient boosted trees.</p>
 										<a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
 														class="button">More</a>
 									</li>
 								</ul>
-								<ul class="statistics">
+								<span class="logo"><img style='height: 100%; width: 100%; object-fit: contain' src="images/quote.png" alt="" /></span>
+								<!-- <ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
 										<strong>5,120</strong> Etiam
@@ -163,8 +164,8 @@
 										<span class="icon fa-gem"></span>
 										<strong>1,024</strong> Nullam
 									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+								</ul> -->
+								<!-- <p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p> -->
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
