--- a/index.html
+++ b/index.html
@@ -103,42 +103,42 @@
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>K-means</h3>
 										<p>Implementation of K-means/K-means++.</p>
-										<a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+										<a href="https://github.com/jason-yu1/k-means/blob/main/kmeans.pdf"
 														class="button">More</a>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Feature Importance</h3>
 										<p>Feature importance techniques using supervised and unsupervised methods.</p>
-										<a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+										<a href="https://github.com/jason-yu1/feature-importance/blob/main/featimp.pdf"
 														class="button">More</a>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>Linear Regression</h3>
 										<p>Implementation of regularized linear regression with gradient descent.</p>
-										<a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+										<a href="https://github.com/jason-yu1/linear-reg"
 														class="button">More</a>
 									</li>
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>Decision Tree</h3>
 										<p>Implementation of decision tree.</p>
-										<a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+										<a href="https://github.com/jason-yu1/decision-tree"
 														class="button">More</a>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Random Forest</h3>
 										<p>Implementation of random forest.</p>
-										<a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+										<a href="https://github.com/jason-yu1/random-forest"
 														class="button">More</a>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>Gradient Boosting</h3>
 										<p>Implementation of gradient boosted trees.</p>
-										<a href="https://centralcoastdatascience.org/projects/all/2021/mining-criminal-records-based-html-data"
+										<a href="https://github.com/jason-yu1/boosting"
 														class="button">More</a>
 									</li>
 								</ul>
