--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>K-means</h3>
 										<p>Implementation of K-means/K-means++.</p>
-										<a href="https://github.com/jason-yu1/k-means/blob/main/kmeans.pdf"
+										<a href="https://github.com/jason-yu1/k-means/blob/main/kmeans.ipynb"
 														class="button">More</a>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Feature Importance</h3>
 										<p>Feature importance techniques using supervised and unsupervised methods.</p>
-										<a href="https://github.com/jason-yu1/feature-importance/blob/main/featimp.pdf"
+										<a href="https://github.com/jason-yu1/feature-importance/blob/main/featimp.ipynb"
 														class="button">More</a>
 									</li>
 									<li>
