--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Jason Yu</h1>
 						<p>Data Science Project Portfolio<br />
-						Github: <a href="https://github.com/yuuknowwhoitis"> github.com/yuuknowwhoitis</a></p>
+						Github: <a href="https://github.com/yuknowwhoitis"> github.com/yuknowwhoitis</a></p>
 					</header>
 
 				<!-- Nav -->
