--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="https://github.com/yuknowwhoitis" class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
